# govcontract

./: .gitignore  Anchor.toml  README.md  dapp-deploy-testing-guide.md  package-lock.json  package.json  svmgov_testnet.md
contract/: .gitignore  Anchor.toml  package.json  readme.md
contract/programs/govcontract/: Cargo.toml
contract/programs/govcontract/src/: constants.rs  error.rs  events.rs  lib.rs  merkle_helpers.rs  utils.rs
contract/programs/govcontract/src/instructions/: add_merkle_root.rs  adjust_creation_epoch.rs  adjust_epochs.rs  adjust_proposal_epochs.rs  adjust_proposal_timing.rs  admin_set_snapshot_slot.rs  cast_vote.rs  cast_vote_override.rs  create_proposal.rs  finalize_proposal.rs  flush_merkle_root.rs  initialize_index.rs  mod.rs  modify_vote.rs  modify_vote_override.rs  refund_vote.rs  support_proposal.rs  tally_votes.rs
contract/programs/govcontract/src/state/: mod.rs  proposal.rs  proposal_index.rs  vote.rs  vote_override.rs  vote_override_cache.rs
contract/programs/mock-gov-v1/: Cargo.toml
contract/programs/mock-gov-v1/src/: lib.rs
contract/programs/mock-gov-v1/src/instructions/: close_meta_merkle_proof.rs  create_consensus_result.rs  init_meta_merkle_proof.rs  mod.rs  verify_merkle_proof.rs
contract/programs/mock-gov-v1/src/state/: consensus_result.rs  helper_structs.rs  meta_merkle_proof.rs  mod.rs
contract/tests/: govcontract.ts  mock_gov_v1.ts  test-constants.ts  test-helpers.ts  test-setup.ts
docs/: package.json
docs/src/content/: index.mdx
frontend/: .env.example  jest.setup.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
frontend/src/: env.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/chain/: helpers.ts  index.ts
frontend/src/components/: AppWalletProvider.tsx  CurrentPhase copy.tsx  CurrentPhase.tsx  Footer.tsx  GovernanceActions.tsx  LiveProposal.tsx  LiveResults.tsx  Navbar.tsx  ProposalDetails.tsx  Quorum.tsx  StakeAccountsDropdown.tsx  TopVoters.tsx  TopVotersMobile.tsx  ValidatorDetail.tsx  VotesBubbleChart.tsx  VotingProposalsDropdown.tsx  index.ts  top voters sorting.md
frontend/src/contexts/: EndpointContext.tsx  ModalContext.tsx  NcnApiContext.tsx  ProgramIdContext.tsx
frontend/src/data/: castVoteMutation.ts  castVoteOverrideMutation.ts  createProposalMutation.ts  getAllProposals.ts  getDelegatedStakeAccounts.ts  getHasUserVoted.ts  getProposalVoteOverrides.ts  getProposalVotes.ts  getProposals.ts  getStakeAccounts.ts  getValidatorProposalVoteAccount.ts  getValidatorVoteAccounts.ts  getValidators.ts  getVoteAccounts.ts  getVoteOverrideAccounts.ts  getVoteProposals.ts  getVoterWalletSummary.ts  getWalletStakeAccounts.ts  index.ts  (+3 more)
svmgov/: Cargo.toml  install.sh  readme.md
svmgov/idls/: gov_v1.json  govcontract.json
svmgov/src/: config.rs  constants.rs  main.rs
svmgov/src/instructions/: add_merkle_root.rs  adjust_creation_epoch.rs  adjust_epochs.rs  adjust_proposal_epochs.rs  adjust_proposal_timing.rs  admin_set_snapshot_slot.rs  cast_vote.rs  cast_vote_override.rs  create_proposal.rs  finalize_proposal.rs  init_index.rs  mod.rs  modify_vote.rs  modify_vote_override.rs  support_proposal.rs  tally_votes.rs
svmgov/src/utils/: api_helpers.rs  commands.rs  config_command.rs  init.rs  merkle_helpers.rs  mod.rs  utils.rs
svmgov/tests/: utils_tests.rs
tests/: govcontract.ts
(+200 files in other folders)
