[package]
name = "govcontract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "govcontract"

[features]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
default = ["production"]  # Default to testing (mock program) if no features specified
production = ["gov-v1"]
testing = ["mock_gov_v1"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"]}
gov-v1 = { git = "https://github.com/exo-tech-xyz/gov-v1", branch = "signer-check",features = ["cpi"], optional = true }
mock_gov_v1 = { path = "../mock-gov-v1", features = ["cpi"], optional = true }

