[package]
name = "mock_gov_v1"
version = "0.1.0"
description = "Mock gov_v1 for testing CPI calls"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_gov_v1"

[features]
idl-build = ["anchor-lang/idl-build"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
default = []

[dependencies]
anchor-lang = {version ="0.31.1",  features = ["init-if-needed"]}
